--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django-filter = "*"
 pillow = "*"
 djangorestframework-simplejwt = "*"
 django-cors-headers = "*"
+psycopg2-binary = "*"
 python-dotenv = "*"
 
 [dev-packages]
