--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
 		"react-scripts": "4.0.3",
 		"web-vitals": "^1.1.2"
 	},
-	"proxy": "https://localhost:8000",
+	"proxy": "http://localhost:8000",
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
