--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,13 @@
 		"@testing-library/react": "^11.2.6",
 		"@testing-library/user-event": "^12.8.3",
 		"axios": "^0.21.1",
+		"formik": "^2.2.7",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
-		"web-vitals": "^1.1.2"
+		"web-vitals": "^1.1.2",
+		"yup": "^0.32.9"
 	},
 	"proxy": "http://localhost:8000",
 	"scripts": {
