--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ djangorestframework-simplejwt = "*"
 django-cors-headers = "*"
 psycopg2-binary = "*"
 python-dotenv = "*"
+requests = "*"
+beautifulsoup4 = "*"
 
 [dev-packages]
 
